--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -35,7 +35,7 @@ jobs:
         cache: maven
 
     - name: Build
-      run: mvn clean install
+      run: mvn clean install -q
 
     # # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
