--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -34,7 +34,18 @@ jobs:
         distribution: temurin
         cache: maven
 
-    - name: Build
+    - name: Set version
+      id: config
+      run: |
+        VERSION="0.0.${{ github.run_number }}-dev"
+        echo "VERSION=$(echo $VERSION)" >> $GITHUB_ENV
+        echo "VERSION=$(echo $VERSION)" >> $GITHUB_OUTPUT
+        echo "VERSION=$(echo $VERSION)"
+
+    - name: Show version
+      run: echo ${{ env.VERSION }}
+
+    - name: Maven Build
       run: mvn clean install -q
 
     # # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
