--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -38,7 +38,7 @@ jobs:
       id: config
       run: |
         MVN_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        echo "MVN_VERSION=$(echo $MVN_VERSION)"
+        echo "MVN_VERSION=$(echo ${MVN_VERSION%%-*})"
         VERSION="0.0.${{ github.run_number }}-dev"
         echo "VERSION=$(echo $VERSION)" >> $GITHUB_ENV
         echo "VERSION=$(echo $VERSION)" >> $GITHUB_OUTPUT
