--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -38,8 +38,9 @@ jobs:
       id: config
       run: |
         MVN_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        echo "MVN_VERSION=$(echo ${MVN_VERSION%%-*})"
-        VERSION="0.0.${{ github.run_number }}-dev"
+        MVN_VERSION=$(echo ${MVN_VERSION%%-*})
+        echo "MVN_VERSION=$(echo ${MVN_VERSION})"
+        VERSION="${MVN_VERSION}-dev.${{ github.run_number }}"
         echo "VERSION=$(echo $VERSION)" >> $GITHUB_ENV
         echo "VERSION=$(echo $VERSION)" >> $GITHUB_OUTPUT
         echo "VERSION=$(echo $VERSION)"
