--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,27 +1,13 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Develop
 
 on:
   push:
     branches:
       - develop
-      - version1
-      - version2
-      - version3
-
-#  pull_request:
-#    branches: [ "develop" ]
 
 jobs:
   build:
-
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
@@ -34,9 +20,46 @@ jobs:
         distribution: temurin
         cache: maven
 
-    - name: Build
-      run: mvn clean install
+    - name: Set version
+      id: config
+      run: |
+        MVN_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        echo "MVN_VERSION=$(echo $MVN_VERSION)" >> $GITHUB_ENV
+        echo "MVN_VERSION=$(echo $MVN_VERSION)"
+        MVN_RELEASE_VERSION=$(echo ${MVN_VERSION%%-*})
+        echo "MVN_RELEASE_VERSION=$(echo ${MVN_RELEASE_VERSION})"
+        VERSION="${MVN_RELEASE_VERSION}-dev.${{ github.run_number }}"
+        echo "VERSION=$(echo $VERSION)" >> $GITHUB_ENV
+        echo "VERSION=$(echo $VERSION)" >> $GITHUB_OUTPUT       
+        echo "VERSION=$(echo $VERSION)"
 
-    # # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    # - name: Update dependency graph
-    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Maven Build
+      run: mvn clean install -q
+
+    - name: Docker Build
+      run: |
+        echo "VERSION=${{ env.VERSION }}"
+        echo "MVN_VERSION=${{ env.MVN_VERSION }}"
+        docker build --platform linux/amd64 \
+          --build-arg mvn_version=${{ env.MVN_VERSION }} \
+          --build-arg version=${{ env.VERSION }} \
+          -t ${{ vars.CONTAINER_REGISTRY_URL }}/${{ vars.CONTAINER_IMAGE_NAME }}:${{ env.VERSION }} .
+
+    - name: Docker Publish
+      shell: bash
+      run: echo "Docker Publish"
+
+    - name: Package helm chart
+      id: helm_package
+      shell: bash
+      run: |
+        helm_package_output=$(helm package charts/${{ vars.HELM_CHART_NAME }} \
+          --app-version ${{ env.VERSION }} \
+          --version ${{ env.VERSION }})
+        helm_artifact=$(basename -- $(echo $helm_package_output | awk '{ print $NF}'))
+        echo $helm_artifact
+        echo "helm_artifact=$(echo $helm_artifact)" >> $GITHUB_OUTPUT
+
+    - name: Publish helm chart
+      shell: bash
+      run: echo "Publish helm chart"
