--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -13,54 +13,62 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - name: Azure login
+      uses: azure/login@v1
       with:
-        java-version: '17'
-        distribution: temurin
-        cache: maven
+        creds: ${{ secrets.AZURE_CI }}
 
-    - name: Set version
-      id: config
-      run: |
-        MVN_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        echo "MVN_VERSION=$(echo $MVN_VERSION)" >> $GITHUB_ENV
-        echo "MVN_VERSION=$(echo $MVN_VERSION)"
-        MVN_RELEASE_VERSION=$(echo ${MVN_VERSION%%-*})
-        echo "MVN_RELEASE_VERSION=$(echo ${MVN_RELEASE_VERSION})"
-        VERSION="${MVN_RELEASE_VERSION}-dev.${{ github.run_number }}"
-        echo "VERSION=$(echo $VERSION)" >> $GITHUB_ENV
-        echo "VERSION=$(echo $VERSION)" >> $GITHUB_OUTPUT       
-        echo "VERSION=$(echo $VERSION)"
+    - name: Login ACR
+      run: az acr login --name gcacrapim
 
-    - name: Maven Build
-      run: mvn clean install -q
-
-    - name: Docker Build
-      run: |
-        echo "VERSION=${{ env.VERSION }}"
-        echo "MVN_VERSION=${{ env.MVN_VERSION }}"
-        docker build --platform linux/amd64 \
-          --build-arg mvn_version=${{ env.MVN_VERSION }} \
-          --build-arg version=${{ env.VERSION }} \
-          -t ${{ vars.CONTAINER_REGISTRY_URL }}/${{ vars.CONTAINER_IMAGE_NAME }}:${{ env.VERSION }} .
-
-    - name: Docker Publish
-      shell: bash
-      run: echo "Docker Publish"
-
-    - name: Package helm chart
-      id: helm_package
-      shell: bash
-      run: |
-        helm_package_output=$(helm package charts/${{ vars.HELM_CHART_NAME }} \
-          --app-version ${{ env.VERSION }} \
-          --version ${{ env.VERSION }})
-        helm_artifact=$(basename -- $(echo $helm_package_output | awk '{ print $NF}'))
-        echo $helm_artifact
-        echo "helm_artifact=$(echo $helm_artifact)" >> $GITHUB_OUTPUT
-        echo "helm_artifact=$(echo $helm_artifact)" >> $GITHUB_ENV
-
-    - name: Publish helm chart
-      shell: bash
-      run: echo "Publish helm chart ${{ env.helm_artifact }}"
+#    - name: Set up JDK 17
+#      uses: actions/setup-java@v3
+#      with:
+#        java-version: '17'
+#        distribution: temurin
+#        cache: maven
+#
+#    - name: Set version
+#      id: config
+#      run: |
+#        MVN_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+#        echo "MVN_VERSION=$(echo $MVN_VERSION)" >> $GITHUB_ENV
+#        echo "MVN_VERSION=$(echo $MVN_VERSION)"
+#        MVN_RELEASE_VERSION=$(echo ${MVN_VERSION%%-*})
+#        echo "MVN_RELEASE_VERSION=$(echo ${MVN_RELEASE_VERSION})"
+#        VERSION="${MVN_RELEASE_VERSION}-dev.${{ github.run_number }}"
+#        echo "VERSION=$(echo $VERSION)" >> $GITHUB_ENV
+#        echo "VERSION=$(echo $VERSION)" >> $GITHUB_OUTPUT
+#        echo "VERSION=$(echo $VERSION)"
+#
+#    - name: Maven Build
+#      run: mvn clean install -q
+#
+#    - name: Docker Build
+#      run: |
+#        echo "VERSION=${{ env.VERSION }}"
+#        echo "MVN_VERSION=${{ env.MVN_VERSION }}"
+#        docker build --platform linux/amd64 \
+#          --build-arg mvn_version=${{ env.MVN_VERSION }} \
+#          --build-arg version=${{ env.VERSION }} \
+#          -t ${{ vars.CONTAINER_REGISTRY_URL }}/${{ vars.CONTAINER_IMAGE_NAME }}:${{ env.VERSION }} .
+#
+#    - name: Docker Publish
+#      shell: bash
+#      run: echo "Docker Publish"
+#
+#    - name: Package helm chart
+#      id: helm_package
+#      shell: bash
+#      run: |
+#        helm_package_output=$(helm package charts/${{ vars.HELM_CHART_NAME }} \
+#          --app-version ${{ env.VERSION }} \
+#          --version ${{ env.VERSION }})
+#        helm_artifact=$(basename -- $(echo $helm_package_output | awk '{ print $NF}'))
+#        echo $helm_artifact
+#        echo "helm_artifact=$(echo $helm_artifact)" >> $GITHUB_OUTPUT
+#        echo "helm_artifact=$(echo $helm_artifact)" >> $GITHUB_ENV
+#
+#    - name: Publish helm chart
+#      shell: bash
+#      run: echo "Publish helm chart ${{ env.helm_artifact }}"
