--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -9,7 +9,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-
+    env:
+      IMAGE_URL: ${{ vars.ACR_NAME }}.azurecr.io/${{ vars.CONTAINER_IMAGE_NAME }}
     steps:
     - uses: actions/checkout@v3
 
@@ -21,42 +22,42 @@ jobs:
     - name: Login ACR
       run: az acr login --name ${{ vars.ACR_NAME }}
 
-#    - name: Set up JDK 17
-#      uses: actions/setup-java@v3
-#      with:
-#        java-version: '17'
-#        distribution: temurin
-#        cache: maven
-#
-#    - name: Set version
-#      id: config
-#      run: |
-#        MVN_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-#        echo "MVN_VERSION=$(echo $MVN_VERSION)" >> $GITHUB_ENV
-#        echo "MVN_VERSION=$(echo $MVN_VERSION)"
-#        MVN_RELEASE_VERSION=$(echo ${MVN_VERSION%%-*})
-#        echo "MVN_RELEASE_VERSION=$(echo ${MVN_RELEASE_VERSION})"
-#        VERSION="${MVN_RELEASE_VERSION}-dev.${{ github.run_number }}"
-#        echo "VERSION=$(echo $VERSION)" >> $GITHUB_ENV
-#        echo "VERSION=$(echo $VERSION)" >> $GITHUB_OUTPUT
-#        echo "VERSION=$(echo $VERSION)"
-#
-#    - name: Maven Build
-#      run: mvn clean install -q
-#
-#    - name: Docker Build
-#      run: |
-#        echo "VERSION=${{ env.VERSION }}"
-#        echo "MVN_VERSION=${{ env.MVN_VERSION }}"
-#        docker build --platform linux/amd64 \
-#          --build-arg mvn_version=${{ env.MVN_VERSION }} \
-#          --build-arg version=${{ env.VERSION }} \
-#          -t ${{ vars.CONTAINER_REGISTRY_URL }}/${{ vars.CONTAINER_IMAGE_NAME }}:${{ env.VERSION }} .
-#
-#    - name: Docker Publish
-#      shell: bash
-#      run: echo "Docker Publish"
-#
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: temurin
+        cache: maven
+
+    - name: Set version
+      id: config
+      run: |
+        MVN_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        echo "MVN_VERSION=$(echo $MVN_VERSION)" >> $GITHUB_ENV
+        echo "MVN_VERSION=$(echo $MVN_VERSION)"
+        MVN_RELEASE_VERSION=$(echo ${MVN_VERSION%%-*})
+        echo "MVN_RELEASE_VERSION=$(echo ${MVN_RELEASE_VERSION})"
+        VERSION="${MVN_RELEASE_VERSION}-dev.${{ github.run_number }}"
+        echo "VERSION=$(echo $VERSION)" >> $GITHUB_ENV
+        echo "VERSION=$(echo $VERSION)" >> $GITHUB_OUTPUT
+        echo "VERSION=$(echo $VERSION)"
+
+    - name: Maven Build
+      run: mvn clean install -q
+
+    - name: Docker Build
+      run: |
+        echo "VERSION=${{ env.VERSION }}"
+        echo "MVN_VERSION=${{ env.MVN_VERSION }}"
+        docker build --platform linux/amd64 \
+          --build-arg mvn_version=${{ env.MVN_VERSION }} \
+          --build-arg version=${{ env.VERSION }} \
+          -t ${{ env.IMAGE_URL }}:${{ env.VERSION }} .
+
+    - name: Docker Publish
+      shell: bash
+      run: docker push ${{ env.IMAGE_URL }}:${{ env.VERSION }}
+
 #    - name: Package helm chart
 #      id: helm_package
 #      shell: bash
