develop CI + CD

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -104,3 +104,9 @@ jobs:
       - name: Helm repo login
         run: |
           az acr login -n ${{ vars.ACR_NAME }}.azurecr.io  -t -ojson | jq -r .accessToken | helm registry login ${{ vars.ACR_NAME }}.azurecr.io -u 00000000-0000-0000-0000-000000000000 --password-stdin
+
+      - name: Install HELM release
+        run: |
+          helm -n ${{ vars.KUBERNETES_NAMESPACE }} upgrade --install apim-demo-app oci://${{ vars.ACR_NAME }}.azurecr.io/charts/${{ vars.HELM_CHART_NAME }} \
+            --version ${{ env.VERSION }} \
+            --dry-run
