--- a/charts/apim-demo-app/templates/apim-publisher.job.yaml
+++ b/charts/apim-demo-app/templates/apim-publisher.job.yaml
@@ -25,12 +25,15 @@ spec:
           command:
             - sleep
             - "5"
+          env:
+            - name: API_MANAGEMENT_SERVICE_OUTPUT_FOLDER_PATH
+              value: /apimartifacts
           envFrom:
             - secretRef:
                 name: {{ .Values.apimPublisher.accessSecret }}
           volumeMounts:
             - name: apim-config
-              mountPath: /etc/apim
+              mountPath: apimartifacts
       volumes:
         - name: apim-config
           configMap:
