--- a/charts/apim-demo-app/values.yaml
+++ b/charts/apim-demo-app/values.yaml
@@ -49,7 +49,7 @@ apimPublisher:
   jobSleep: 10
 
 apim:
-  openApiSpec: |
+  openApiSpec: |-
     ---
     openapi: 3.0.1
     info:
@@ -102,7 +102,7 @@ apim:
                   schema:
                     type: string
     components: {}
-  apiInformation: |
+  apiInformation: |-
     {
       "properties": {
         "apiRevision": "1",
@@ -141,7 +141,7 @@ apim:
     	<outbound />
     </policies>
 
-  apis: |
+  apis: |-
     [
       {
         "name": "swagger-petstore"
