--- a/charts/apim-demo-app/values.yaml
+++ b/charts/apim-demo-app/values.yaml
@@ -53,8 +53,8 @@ apim:
     ---
     openapi: 3.0.1
     info:
-      title: OpenAPI definition
-      version: v0
+      title: APIM demo app
+      version: 1.0.5-SNAPSHOT
     servers:
       - url: http://localhost:8080
         description: Generated server url
