--- a/charts/apim-demo-app/Chart.yaml
+++ b/charts/apim-demo-app/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: apim-demo-app
 description: apim-demo-app helm chart
 type: application
-version: 0.0.14
-appVersion: 0.0.5-SNAPSHOT
+version: 1.0.5-57
+appVersion: 1.0.5-56
